Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49347

winrt: Camera crashes when application suspended while searching and locking focus.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0
    • 5.6.0 Beta
    • Multimedia
    • Windows 8.1 x64
      MSVC 2013
      Nokia Lumia 1520 (WinPhone 8.1)
    • WinRT
    • da0b7aea9adae024d5ea885c7e7589de86ce80f8

      Steps:
      1. Run attached QML on winphone.
      2. Long press back button
      Actual: Application crash.
      Expected: No crash.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes